--- a/baileyVideo.html
+++ b/baileyVideo.html
@@ -105,7 +105,7 @@ video {
   </div>
     
   <div class="content">
-    <h1>Bailey Bug</h1>
+    <h1>Bulldog Friend Forever</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur iste perferendis totam, similique itaque omnis.</p>
   </div>
 
