--- a/baileyVideo.html
+++ b/baileyVideo.html
@@ -106,7 +106,7 @@ video {
     
   <div class="content">
     <h1>Bulldog Friend Forever</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur iste perferendis totam, similique itaque omnis.</p>
+    <p>"Such short little lives our pets have to spend with us, and they spend most of it waiting for us to come home each day." - John Grogan</p>
   </div>
 
   <div class="video-wrapper">
