--- a/baileyVideo.html
+++ b/baileyVideo.html
@@ -119,10 +119,10 @@ video {
    <p>Copyright &copy; Pennington Programming 2023</p>
  
    <div class="social">
-     <a class="borderFlow" href="facebook.com" target="_blank">Facebook</a>
-     <a class="borderFlow" href="twitter.com" target="_blank">Twitter</a>
-     <a class="borderFlow" href="Linkedin.com" target="_blank">Linked In</a>
-     <a class="borderFlow" href="youtube.com" target="_blank">YouTube</a>
+     <a class="borderFlow" href="facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a>
+     <a class="borderFlow" href="twitter.com" target="_blank"><i class="fa-brands fa-square-twitter"></i> Twitter</a>
+     <a class="borderFlow" href="Linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
+     <a class="borderFlow" href="youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i> YouTube</a>
    </div>
  </footer> 
   
